Tweak category emojis to avoid overflow

--- a/styles/components/_todo_list.scss
+++ b/styles/components/_todo_list.scss
@@ -54,6 +54,8 @@
       .category {
         margin-left: 1rem;
         font-size: 1.3rem;
+        width: 2rem;
+        height: 2rem;
       }
     }
 
